--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
                                 <i class="fa fa-facebook fa-6 fa-stack-1x"></i>
                             </a>
                         </span>
+                        <span class="fa-stack fa-lg">
+                            <a href="https://www.freecodecamp.org/mohammaduvez" target="_blank" class="freecodecamp">
+                                <i class="fa fa-square-o fa-stack-2x"></i>
+                                <i class="fa fa-square fa-stack-2x"></i>
+                                <i class="fa fa-free-code-camp fa-6 fa-stack-1x"></i>
+                            </a>
+                        </span>
                     </div>
             </div>
         </div>
