--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="row well well-lg">
                     <div class="col-md-6 text-center h3">
                         E-mail ::<br/>
-                        <a href="mailto:contact@daataar.com" target="_top">contact@daataar.com</a>
+                        <a href="mailto:daataarmail@gmail.com" target="_top">daataarmail@gmail.com</a>
                     </div>
                     <div class="col-md-6 text-center h3">
                         Find Me On ::<br/>
